# luma-door-unlocker-using-pi

./: .gitignore  README.md  pyproject.toml
config/: settings.json
research/: README.md  try.ipynb
src/: __init__.py  main.py
src/auth/: luma_client.py
src/camera/: qr_scanner.py
src/storage/: credentials_manager.py
src/utils/: __init__.py  config.py  logger.py
